Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5871

Setting access scanner sleeptime caused memcached to crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      Setting alog_sleep_time sometimes would crash memcached process.

      Thread 5 Crashed:
      0 libsystem_c.dylib 0x00007fff8acd0f91 pthread_mutex_lock + 17
      1 ep.0.so 0x000000010084f031 Mutex::acquire() + 19 (mutex.cc:67)
      2 ep.0.so 0x000000010081ee7e EventuallyPersistentStore::setAccessScannerSleeptime(unsigned long) + 36 (ep.cc:2508)
      3 ep.0.so 0x000000010089b193 Configuration::setParameter(std::string const&, unsigned long) + 551
      4 ep.0.so 0x000000010089c95d Configuration::setAlogSleepTime(unsigned long const&) + 65
      5 ep.0.so 0x000000010083fc2a processUnknownCommand + 4746 (ep_engine.cc:417)
      6 ep.0.so 0x000000010083e4e2 EvpUnknownCommand + 50 (ep_engine.cc:978)
      7 bucket_engine.0.so 0x000000010056cd38 bucket_unknown_command + 744 (bucket_engine.c:2428)
      8 memcached 0x000000010044b4ae complete_nread_binary + 7630 (memcached.c:2878)
      9 memcached 0x00000001004412bf conn_nread + 1247 (memcached.c:3819)
      10 memcached 0x0000000100444055 event_handler + 645 (memcached.c:5930)
      11 libevent-2.0.5.dylib 0x0000000100479eae event_base_loop + 1089
      12 memcached 0x00000001004516ae worker_libevent + 62 (thread.c:301)
      13 libsystem_c.dylib 0x00007fff8acd28bf _pthread_start + 335
      14 libsystem_c.dylib 0x00007fff8acd5b75 thread_start + 13

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liang Liang Guo (Inactive)
            liang Liang Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty