MB-5871 Fix wrong access scanner sleep time value change listenner

Whenever alog_sleep_time is changed, another instance of listener
would be created as part of new access scanner. This would linger
around while its access scanner had been released. Change to use
EPStoreValueChangeListener and create it only once.

Change-Id: Ifdfa23d4acf2b7eab1ff60baeeaa3e16c968c4fb
Reviewed-on: http://review.couchbase.org/18259
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Liang Guo <liang@couchbase.com>